[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
ggez = "0.5.0-rc.2"
ggez-goodies = { git = "https://github.com/ggez/ggez-goodies.git", branch="devel" }
euclid = { version = "0.19", features=["mint"] }
warmy = "0.11"
specs = "0.14"
specs-derive = "0.4"
